builtins/trybuild/tests/borrow_checker_two_mut_fail.stderr
warning: unused imports: `SlAsMut`, `SlAsRef`, `SlInto`
 --> trybuild/tests/borrow_checker_two_mut_fail.rs:2:28
  |
2 | use compile_state::types::{SlAsMut, SlAsRef, SlInto};
  |                            ^^^^^^^  ^^^^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0499]: cannot borrow `vm` as mutable more than once at a time
  --> trybuild/tests/borrow_checker_two_mut_fail.rs:15:30
   |
12 |             let d = vm.get_string_mut(d).unwrap();
   |                     -- first mutable borrow occurs here
...
15 |                     let d2 = vm.get_string_mut(d2).unwrap();
   |                              ^^ second mutable borrow occurs here
16 |                     println!("x: {}", d);
   |                                       - first borrow later used here
